@@ -38,15 +38,31 @@
 <a NAME="News"></a><b>News</b>: 
 <ul>
  <li>
-  A new <a href="membership-policy.html">membership qualification 
-  policy</a> has been adopted and the GNOME Foundation Membership 
-  has been re-opened to new members.  If you would like to become 
-  a member, please <a href="membership-form.html">apply here</a>.  
+  <strong>2001 Election Schedule Announced</strong> <small>(10/22/2001)</small> 
+  <blockquote>
+   The 2001 elections for the GNOME Foundation Board of Directors
+   has been <a 
+   href="http://mail.gnome.org/archives/foundation-list/2001-October/msg00050.html">announced</a>.  
+   The announcement includes the timeline and details for who is eligible 
+   for nomination and to vote.
+  </blockquote>
  </li>
  <li>
-  Minutes from the most recent board meeting can always be found in 
-  the <a href="http://mail.gnome.org/archives/foundation-announce/">
-  foundation-announce mailing list archives</a>.
+  <strong>New Membership Policy Adopted</strong> <small>(07/12/2001)</small> 
+  <blockquote>
+   A new <a href="membership-policy.html">membership qualification 
+   policy</a> has been adopted and the GNOME Foundation Membership 
+   has been re-opened to new members.  If you would like to become 
+   a member, please <a href="membership-form.html">apply here</a>.  
+  </blockquote>
+ </li>
+ <li>
+  <strong>Board Meeting Minutes</strong> <small>(biweekly)</small> 
+  <blockquote>
+   Minutes from the most recent board meeting can always be found in 
+   the <a href="http://mail.gnome.org/archives/foundation-announce/">
+   foundation-announce mailing list archives</a>.
+  </blockquote>
  </li>
 </ul>
 
