@@ -1,3 +1,9 @@
+2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>
+
+	Updating news items.
+
+	* index.html:
+
 2001-10-23  Dan Mueth  <d-mueth@uchicago.edu>
 
 	Moving old overview document out of the way and putting
